PYME/Acquire/Hardware/CanonEOS/EDSDK.h


EdsError EDSAPI EdsSetProgressCallback(
                EdsBaseRef          inRef,
                EdsProgressCallback inProgressCallback,
                EdsProgressOption   inProgressOption,
                EdsVoid*            inContext );
EdsError EDSAPI EdsCreateImageRef(  EdsStreamRef        inStreamRef,   
                                    EdsImageRef*        outImageRef );
EdsError EDSAPI EdsGetImageInfo(  EdsImageRef        inImageRef,   
                                  EdsImageSource     inImageSource,
                                  EdsImageInfo*      outImageInfo );
EdsError EDSAPI EdsGetImage(
        EdsImageRef             inImageRef,
        EdsImageSource          inImageSource,
        EdsTargetImageType      inImageType,
        EdsRect                 inSrcRect,
        EdsSize                 inDstSize,
        EdsStreamRef            outStreamRef );
EdsError EDSAPI EdsSaveImage(
        EdsImageRef             inImageRef,
        EdsTargetImageType      inImageType,
        EdsSaveImageSetting     inSaveSetting,
        EdsStreamRef            outStreamRef );
EdsError EDSAPI EdsCacheImage(      EdsImageRef     inImageRef,
                                    EdsBool         inUseCache );
EdsError EDSAPI EdsReflectImageProperty(    EdsImageRef      inImageRef );
EdsError  EdsCreateEvfImageRef ( 
					EdsStreamRef  inStreamRef,
					EdsEvfImageRef  *outEvfImageRef ) ;
EdsError EdsDownloadEvfImage ( EdsCameraRef  inCameraRef,
				EdsEvfImageRef  inEvfImageRef ) ;
EdsError EDSAPI EdsSetCameraAddedHandler( 
            EdsCameraAddedHandler       inCameraAddedHandler,
            EdsVoid*                    inContext );
EdsError EDSAPI EdsSetPropertyEventHandler(
            EdsCameraRef                    inCameraRef, 
            EdsPropertyEvent                inEvnet,           
            EdsPropertyEventHandler         inPropertyEventHandler,
            EdsVoid*                        inContext );
EdsError EDSAPI EdsSetObjectEventHandler(
            EdsCameraRef                    inCameraRef, 
            EdsObjectEvent                  inEvnet,           
            EdsObjectEventHandler           inObjectEventHandler,
            EdsVoid*                        inContext );
EdsError EDSAPI EdsSetCameraStateEventHandler(
            EdsCameraRef                    inCameraRef, 
            EdsStateEvent                   inEvnet,           
            EdsStateEventHandler            inStateEventHandler,
            EdsVoid*                        inContext );
EdsError EDSAPI EdsCreateStream(EdsIStream* inStream, EdsStreamRef* outStreamRef);
EdsError EDSAPI EdsGetEvent();