PYME/Acquire/Hardware/CanonEOS/eossdk.py


# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 990
if hasattr(_libs['EDSDK'], 'EdsSetProgressCallback'):
    EdsSetProgressCallback = _libs['EDSDK'].EdsSetProgressCallback
    EdsSetProgressCallback.argtypes = [EdsBaseRef, EdsProgressCallback, EdsProgressOption, POINTER(EdsVoid)]
    EdsSetProgressCallback.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1026
if hasattr(_libs['EDSDK'], 'EdsCreateImageRef'):
    EdsCreateImageRef = _libs['EDSDK'].EdsCreateImageRef
    EdsCreateImageRef.argtypes = [EdsStreamRef, POINTER(EdsImageRef)]
    EdsCreateImageRef.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1061
if hasattr(_libs['EDSDK'], 'EdsGetImageInfo'):
    EdsGetImageInfo = _libs['EDSDK'].EdsGetImageInfo
    EdsGetImageInfo.argtypes = [EdsImageRef, EdsImageSource, POINTER(EdsImageInfo)]
    EdsGetImageInfo.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1106
if hasattr(_libs['EDSDK'], 'EdsGetImage'):
    EdsGetImage = _libs['EDSDK'].EdsGetImage
    EdsGetImage.argtypes = [EdsImageRef, EdsImageSource, EdsTargetImageType, EdsRect, EdsSize, EdsStreamRef]
    EdsGetImage.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1139
if hasattr(_libs['EDSDK'], 'EdsSaveImage'):
    EdsSaveImage = _libs['EDSDK'].EdsSaveImage
    EdsSaveImage.argtypes = [EdsImageRef, EdsTargetImageType, EdsSaveImageSetting, EdsStreamRef]
    EdsSaveImage.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1165
if hasattr(_libs['EDSDK'], 'EdsCacheImage'):
    EdsCacheImage = _libs['EDSDK'].EdsCacheImage
    EdsCacheImage.argtypes = [EdsImageRef, EdsBool]
    EdsCacheImage.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1182
if hasattr(_libs['EDSDK'], 'EdsReflectImageProperty'):
    EdsReflectImageProperty = _libs['EDSDK'].EdsReflectImageProperty
    EdsReflectImageProperty.argtypes = [EdsImageRef]
    EdsReflectImageProperty.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1198
if hasattr(_libs['EDSDK'], 'EdsCreateEvfImageRef'):
    EdsCreateEvfImageRef = _libs['EDSDK'].EdsCreateEvfImageRef
    EdsCreateEvfImageRef.argtypes = [EdsStreamRef, POINTER(EdsEvfImageRef)]
    EdsCreateEvfImageRef.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1223
if hasattr(_libs['EDSDK'], 'EdsDownloadEvfImage'):
    EdsDownloadEvfImage = _libs['EDSDK'].EdsDownloadEvfImage
    EdsDownloadEvfImage.argtypes = [EdsCameraRef, EdsEvfImageRef]
    EdsDownloadEvfImage.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1253
if hasattr(_libs['EDSDK'], 'EdsSetCameraAddedHandler'):
    EdsSetCameraAddedHandler = _libs['EDSDK'].EdsSetCameraAddedHandler
    EdsSetCameraAddedHandler.argtypes = [EdsCameraAddedHandler, POINTER(EdsVoid)]
    EdsSetCameraAddedHandler.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1278
if hasattr(_libs['EDSDK'], 'EdsSetPropertyEventHandler'):
    EdsSetPropertyEventHandler = _libs['EDSDK'].EdsSetPropertyEventHandler
    EdsSetPropertyEventHandler.argtypes = [EdsCameraRef, EdsPropertyEvent, EdsPropertyEventHandler, POINTER(EdsVoid)]
    EdsSetPropertyEventHandler.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1307
if hasattr(_libs['EDSDK'], 'EdsSetObjectEventHandler'):
    EdsSetObjectEventHandler = _libs['EDSDK'].EdsSetObjectEventHandler
    EdsSetObjectEventHandler.argtypes = [EdsCameraRef, EdsObjectEvent, EdsObjectEventHandler, POINTER(EdsVoid)]
    EdsSetObjectEventHandler.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1335
if hasattr(_libs['EDSDK'], 'EdsSetCameraStateEventHandler'):
    EdsSetCameraStateEventHandler = _libs['EDSDK'].EdsSetCameraStateEventHandler
    EdsSetCameraStateEventHandler.argtypes = [EdsCameraRef, EdsStateEvent, EdsStateEventHandler, POINTER(EdsVoid)]
    EdsSetCameraStateEventHandler.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1343
if hasattr(_libs['EDSDK'], 'EdsCreateStream'):
    EdsCreateStream = _libs['EDSDK'].EdsCreateStream
    EdsCreateStream.argtypes = [POINTER(EdsIStream), POINTER(EdsStreamRef)]
    EdsCreateStream.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 1360
if hasattr(_libs['EDSDK'], 'EdsGetEvent'):
    EdsGetEvent = _libs['EDSDK'].EdsGetEvent
    EdsGetEvent.argtypes = []
    EdsGetEvent.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 51
try:
    EDS_MAX_NAME = 256
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 52
try:
    EDS_TRANSFER_BLOCK_SIZE = 512
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 174
try:
    kEdsPropID_Unknown = 65535
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 176
try:
    kEdsPropID_ProductName = 2
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 177
try:
    kEdsPropID_OwnerName = 4
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 178
try:
    kEdsPropID_MakerName = 5
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 179
try:
    kEdsPropID_DateTime = 6
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 180
try:
    kEdsPropID_FirmwareVersion = 7
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 181
try:
    kEdsPropID_BatteryLevel = 8
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 182
try:
    kEdsPropID_CFn = 9
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 183
try:
    kEdsPropID_SaveTo = 11
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 184
try:
    kEdsPropID_CurrentStorage = 12
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 185
try:
    kEdsPropID_CurrentFolder = 13
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 186
try:
    kEdsPropID_MyMenu = 14
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 188
try:
    kEdsPropID_BatteryQuality = 16
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 190
try:
    kEdsPropID_BodyIDEx = 21
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 191
try:
    kEdsPropID_HDDirectoryStructure = 32
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 197
try:
    kEdsPropID_ImageQuality = 256
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 198
try:
    kEdsPropID_JpegQuality = 257
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 199
try:
    kEdsPropID_Orientation = 258
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 200
try:
    kEdsPropID_ICCProfile = 259
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 201
try:
    kEdsPropID_FocusInfo = 260
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 202
try:
    kEdsPropID_DigitalExposure = 261
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 203
try:
    kEdsPropID_WhiteBalance = 262
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 204
try:
    kEdsPropID_ColorTemperature = 263
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 205
try:
    kEdsPropID_WhiteBalanceShift = 264
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 206
try:
    kEdsPropID_Contrast = 265
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 207
try:
    kEdsPropID_ColorSaturation = 266
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 208
try:
    kEdsPropID_ColorTone = 267
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 209
try:
    kEdsPropID_Sharpness = 268
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 210
try:
    kEdsPropID_ColorSpace = 269
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 211
try:
    kEdsPropID_ToneCurve = 270
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 212
try:
    kEdsPropID_PhotoEffect = 271
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 213
try:
    kEdsPropID_FilterEffect = 272
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 214
try:
    kEdsPropID_ToningEffect = 273
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 215
try:
    kEdsPropID_ParameterSet = 274
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 216
try:
    kEdsPropID_ColorMatrix = 275
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 217
try:
    kEdsPropID_PictureStyle = 276
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 218
try:
    kEdsPropID_PictureStyleDesc = 277
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 219
try:
    kEdsPropID_PictureStyleCaption = 512
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 224
try:
    kEdsPropID_Linear = 768
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 225
try:
    kEdsPropID_ClickWBPoint = 769
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 226
try:
    kEdsPropID_WBCoeffs = 770
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 232
try:
    kEdsPropID_GPSVersionID = 2048
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 233
try:
    kEdsPropID_GPSLatitudeRef = 2049
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 234
try:
    kEdsPropID_GPSLatitude = 2050
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 235
try:
    kEdsPropID_GPSLongitudeRef = 2051
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 236
try:
    kEdsPropID_GPSLongitude = 2052
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 237
try:
    kEdsPropID_GPSAltitudeRef = 2053
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 238
try:
    kEdsPropID_GPSAltitude = 2054
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 239
try:
    kEdsPropID_GPSTimeStamp = 2055
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 240
try:
    kEdsPropID_GPSSatellites = 2056
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 241
try:
    kEdsPropID_GPSStatus = 2057
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 242
try:
    kEdsPropID_GPSMapDatum = 2066
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 243
try:
    kEdsPropID_GPSDateStamp = 2077
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 249
try:
    kEdsPropID_AtCapture_Flag = 2147483648L
except:
    pass

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 255
try:
    kEdsPropID_AEMode = 1024
except:
    pass
